# eve-dataverse

./: .gitignore  .travis.yml  CHANGELOG.rst  Pipfile  README.rst  azure-pipelines.yml  harvester  pyproject.toml  setup.cfg  setup.py
notebooks/: Eve Online Order analysis.ipynb  predict the next kill.ipynb
src/: app.py
src/dataverse/: __init__.py  common.py  constellations.py  exceptions.py  killmail.py  markets.py  regions.py  systems.py  types.py  universe.py
tests/: test_constellations.py  test_killmails.py  test_orders.py  test_regions.py  test_systems.py  test_types.py
