[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*

[options]
tests_require = pytest

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = dataverse
default_section = THIRDPARTY
forced_separate = test_dataverse
not_skip = __init__.py
skip = migrations

[matrix]


python_versions =
    py37

dependencies =

coverage_flags =
    cover: true
    nocov: false
environment_variables =
    -
